# claude-sessions-app

./: .gitignore  README.md  capacitor.config.json  file-preview.js  index.html  main.js  package.json  preload.js  renderer.js  sessions.example.json  style.css  terminal-search.js
.github/workflows/: build-apk.yml
android-keystore/: claude-sessions.keystore
android-native/: ClaudeSessionsWebView.kt  ComposeInputPlugin.kt  ForegroundService.kt  InputRouter.kt  KeepAlive.kt  LocalShellPlugin.kt  Pty.kt  README.md  SshPlugin.kt  Sshj.kt  TerminalInputConnection.kt
android-native/jni/: CMakeLists.txt  pty.c
android-native/res/layout/: bridge_layout_main.xml  capacitor_bridge_layout_main.xml
docs/: TECHNICAL.md  TERMUX-SETUP.md
lib/: auth.js  session-runtime.js  socks-tunnel.js
scripts/: adb-deploy.sh  android-init.js  build-alpine-rootfs.sh
web/: README.md  server.js
web-android/: compose-input-bridge.js  index.html  local-shell-bridge.js  renderer.js  session-builder.js  ssh-bridge.js  style.css  terminal-search.js  ws-bridge.js
web/public/: file-preview.js  index.html  manifest.webmanifest  renderer.js  style.css  sw.js
